# OpenGLRayTracing

./: .gitignore  CMakeLists.txt  README.md  camera.h  cube.cpp  cube.h  main.cpp  texture.cpp  texture.h
libraries/: shader_s.h
workingDir/assets/: fragment.frag  vertex.vert
workingDir/assets/shaders/: fragment.frag  lightCubeShader.frag  lightCubeShader.vert  vertex.vert
workingDir/assets/textures/: roblox.pdn
